# c3po

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  AGENTS_README.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.txt  DEPLOY_RAILWAY_VERCEL.md  DEPLOY_STEPS.md  DOCKER.md  Dockerfile  Dockerfile.frontend  GUIA_USUARIO_FINAL.md  MARKETING_SUMMARY.md  QUICK_DEPLOY.md  RAILWAY_ENV.md  README.md  README_AGENTS.md  README_DEPLOYMENT.md  README_TECNICO.md  auto-deploy.sh  bash check_connection.sh  bash.sh  chroma_client.sh  deploy.sh  deployment-checklist.sh  diagrams.html  docker-compose.agents.yml  docker-compose.prod.yml  docker-compose.yml  docker.sh  fix_backend_and_railway.sh  fix_backend_imports_and_optimize.sh  fix_railway_json.sh  fix_vercel_env.sh  health_check_c3po.sh  index.html  (+13 more)
.venv-1/: pyvenv.cfg
backend/: .env.example  .env.railway  .railwayignore  Dockerfile  Dockerfile.prod  README.md  alembic.ini  backend_diagnose.sh  docker-compose.prod.yml  docker-compose.yml  fix_and_run.sh  main.py  nginx.conf  pyproject.toml  railway.toml  requirements-termux.txt  requirements.txt  settings.py  settinngs.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 446ad0e7723b_initial_schema.py
backend/app/: email_validator.py  lazy_imports.py  main.py
backend/app/api/: api.py  dependencies.py
backend/app/core/: base.py  config.py  database.py  database.py.bak  deps.py  roles.py  security.py  settings.py  tenant.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_rag_service.py
(+173 files in other folders)
