# ReDrive Edu - Backend
# AI-native educational tutoring platform with RAG

[project]
name = "redrive-edu"
version = "0.1.0"
description = "AI-native contextual tutoring platform for education"
requires-python = ">=3.11"
authors = [{name = "ReDrive Team"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "chromadb>=0.4.0",
    "llama-index>=0.10.0",
    "openai>=1.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-magic>=0.4.27",
    "aiofiles>=23.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "pydantic[email]>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"